# recipe-cluster-app

./: 2025-05-09T10-43_export.csv  README.md  app.py  pyproject.toml
.streamlit/: config.toml
data/: cluster_summary.json  pca_result.csv  processed_recipes.csv  tfidf_ingredients.pkl  tfidf_steps.pkl
pages/: 1_PCA_クラスタ可視化.py  2_キーワード可視化.py  3_レシピ検索.py
preprocess/: process_and_cluster.py
utils/: loader.py
