[tool.poetry]
name = "recipe-cluster-app"
version = "0.1.0"
description = "Streamlit Web App for Recipe Clustering Visualization"
authors = ["Ren Zhiyan"]
license = "MIT"
packages = [{ include = "utils" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.33.0"
pandas = "^2.2.0"
plotly = "^5.19.0"
scikit-learn = "^1.3.2"
streamlit-agraph = "^0.0.45"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
numpy = "^1.24.0"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
